ros2_ws/log/build_2024-09-24_13-20-14/autonomo/stderr.log
  File "/home/emmanuel13/code/AyDpVA/ros2_ws/install/autonomo/lib/python3.12/site-packages/autonomo/publisherveh.py", line 3
    import rclpy.node import Node
                      ^^^^^^
SyntaxError: invalid syntax

